--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a learner at heart.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Colorado</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm a true Colorado girl. I love to ski and mountain bike.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm still trying to figure that out.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Grand Junction, Colorado.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The role encapsulates problem-solving and helping others in an organized fashion.</p>
     </section>
 
     <footer id="footer">
