--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a learner at heart.</p>
+      <p>I am learning about software development.</p>
       <h1>Where I'm From</h1>
       <p>Colorado</p>
       <h1>What are your favorite hobbies?</h1>
