--- a/Module-6 JavaScript Basics/index.html
+++ b/Module-6 JavaScript Basics/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- how come no meta charset?-->
     <title>Watch That Box</title>
     <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
     <!-- <script type="text/javascript" src="javascript.js"></script>  --> 
